FIX dohrena chego

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -13,3 +13,5 @@ $light-theme-color-purple000--o:#F2BEFF;
 $light-theme-color-purple800--o:#F2BEFF66;
 $light-theme-color-red000--o:#be7373;
 $light-theme-color-red800--o:#be737366;
+$light-theme-color-pink000--o: #fc79e3ff;
+$light-theme-color-black000--o: #212121FF;
