--- a/src/assets/pages/LoginPage.scss
+++ b/src/assets/pages/LoginPage.scss
@@ -3,6 +3,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    &-switch {
+        cursor: pointer;
+        color: $default-color-primary-text;
+        font-weight: 600;
+        &.active {
+            color: goldenrod;
+        }
+        &:hover{
+            color: $main-color;
+        }
+    }
     &-form {
         display: flex;
         flex-direction: column;
