--- a/src/assets/blocks/GalleryBlock.scss
+++ b/src/assets/blocks/GalleryBlock.scss
@@ -4,6 +4,9 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
+    h1 {
+        font-size: 20px;
+    }
     &-grid{
         display: grid;
         // grid-template-columns: repeat(3,1fr);
