--- a/src/assets/components/Cases/Case/Files.scss
+++ b/src/assets/components/Cases/Case/Files.scss
@@ -78,3 +78,14 @@
     }
 
 }
+
+@media screen and (max-width:500px){
+    .Files{
+        .fs35.arrow  {
+            display: none;
+        }
+        .FileSearch {
+            display: none;
+            
+        }
+    }}
