--- a/src/assets/components/Cases/Case/Info/DetailedInfo.scss
+++ b/src/assets/components/Cases/Case/Info/DetailedInfo.scss
@@ -59,10 +59,14 @@
 }
 @media screen and (max-width:500px){
     .DetailedInfo{
+        .fs35.arrow {
+            display: none;
+        }
         &-title{
             font-size: 16px;
             &-panel{
-                flex-direction: column;
+                flex-direction: row;
+                font-size: 16px;
             }
         }
     }
