--- a/src/assets/components/Cases/Case/Notes.scss
+++ b/src/assets/components/Cases/Case/Notes.scss
@@ -86,7 +86,7 @@
 }
 @media screen and (max-width:500px){
     .Notes-title{
-        flex-direction: column;
+        flex-direction: row;
     }
     .Notes-title-panel{
             font-size: 16px;
