--- a/src/assets/components/Events/EventPlans.scss
+++ b/src/assets/components/Events/EventPlans.scss
@@ -3,6 +3,9 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
+    border: solid 2px $main-color;
+    padding: 25px;
+    border-radius: 15px;
     &-title{
         display: flex;
         align-items: center;
