--- a/src/assets/pages/File.scss
+++ b/src/assets/pages/File.scss
@@ -75,7 +75,9 @@
             hyphens: auto;
         }
         &-tags{
+            flex-wrap: wrap;
             display: flex;
+            align-items: center;
             gap: 15px;
         }
     }
@@ -98,7 +100,7 @@
 
         >div {
             max-height: 400px;
-            overflow-y: scroll;
+            overflow-y: auto;
         }
     }
 }
