--- a/src/assets/components/Events/EventPlans.scss
+++ b/src/assets/components/Events/EventPlans.scss
@@ -25,6 +25,8 @@
 @media screen and (max-width:720px){
     .EventPlans-inner{
         grid-template-columns: 1fr 1fr;
+        max-height: 1000px;
+        overflow-y: auto;
     }
 }
 @media screen and (max-width:500px){
