--- a/src/assets/blocks/ProfilePhotoBlock.scss
+++ b/src/assets/blocks/ProfilePhotoBlock.scss
@@ -1,7 +1,10 @@
 .ProfilePhotoBlock {
-    background-size:100%;
+    background-size: 100%;
     position: relative;
-    &-hover{
+    height: max-content;
+    width: max-content;
+
+    &-hover {
         width: 100%;
         height: 100%;
         background-color: #00000077;
@@ -9,15 +12,13 @@
         align-items: center;
         justify-content: center;
         position: absolute;
-       }
-    &-img {
-        width: 100%;
-        max-width: 250px;
-        min-width: 250px;
     }
+
     img {
         width: 100%;
-        max-width: 250px;
-        min-width: 250px;
+        max-width: 400px;
+        min-height: 250px;
+        max-height: 300px;
+        object-fit: cover;
     }
 }
