--- a/src/assets/elements/Tables/Table.scss
+++ b/src/assets/elements/Tables/Table.scss
@@ -1,9 +1,11 @@
 .Table{
-    border-collapse: collapse;
     width: 100%;
     max-height: 450px;
     overflow: auto;
     text-align: center;
+    table{
+        border-collapse: collapse;
+    }
     thead{
         background-color: $main-color;
         color: #fff;
@@ -18,8 +20,9 @@
             padding: 5px 10px;
         }
         tr:hover {
+            background-color: $background-color;
             td:last-child{
-                background-color: #eb4a4a;
+                background-color: #ffffff;
                 position: sticky;
                 right: 0px;
             }
