--- a/src/assets/pages/Transactions.scss
+++ b/src/assets/pages/Transactions.scss
@@ -1,4 +1,6 @@
 .Transactions{
+    width: 85%;
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,5 +8,8 @@
     &-title{
         font-size: 25px;
         font-weight: 700;
+        display: flex;
+        align-items: center;
+        gap: 10px;
     }
 }
