--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -10,3 +10,5 @@
 @import "./Accordions/accordions.scss";
 @import "./Hints/hints.scss";
 @import "./Tables/tables.scss";
+@import "./Pagination/Pagination.scss";
+@import "./HeaderFormatter/HeaderFormatter.scss";
