FIX sorted table

--- a/src/assets/components/Cases/ListCases.scss
+++ b/src/assets/components/Cases/ListCases.scss
@@ -6,6 +6,16 @@
         margin: auto;
         padding-bottom: 10px;
         flex-wrap: nowrap;
+        align-items: center;
+    }
+    &-table {
+        width: 90%;
+        margin: auto;
+    }
+    &-pagination {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
     }
 }
 @media screen and (max-width: 600px){
