Fix and added MobileMenu component

--- a/src/assets/components/components.scss
+++ b/src/assets/components/components.scss
@@ -7,3 +7,4 @@
 @import './Groups/index.scss';
 @import "./Events/events.scss";
 @import './Transactions/transactions.scss';
+@import './MobileNavigation/MobileNavigation.scss';
