Added config twofa

--- a/src/assets/components/Settings/Settings.scss
+++ b/src/assets/components/Settings/Settings.scss
@@ -1,3 +1,4 @@
 @import './SettingsCategory.scss';
 @import './ListCategories.scss';
 @import './SettingsPage.scss';
+@import './SetConfigItem.scss';
