--- a/src/assets/components/Cases/Cases.scss
+++ b/src/assets/components/Cases/Cases.scss
@@ -9,4 +9,5 @@
 @import "./Case/Files.scss";
 @import "./Case/Fields.scss";
 @import "./Case/FileSearch.scss";
+@import "./Case/Histories.scss";
 @import "./ListCases.scss";
