--- a/src/assets/components/Cases/Case/Case.scss
+++ b/src/assets/components/Cases/Case/Case.scss
@@ -137,13 +137,18 @@
         cursor: pointer;
     }
 }
-.uploader_wrap{
+.Uploader{
     margin-top: 30px;
     display: flex;
     align-items: center;
     flex-direction: column;
     font-size: 20px;
     font-weight: bold;
+    &-content{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
 }
 @media (max-width: 600px) {
 
