--- a/src/assets/elements/Uploaders/FilesUploader.scss
+++ b/src/assets/elements/Uploaders/FilesUploader.scss
@@ -18,7 +18,7 @@
         flex-direction: column;
         gap: 10px;
         max-height: 100px;
-        overflow-y: scroll;
+        overflow-y: auto;
         font-weight: normal;
         font-size: 16px;
         div {
