--- a/src/assets/modals/Modal.scss
+++ b/src/assets/modals/Modal.scss
@@ -34,7 +34,7 @@
 
     &--head {
         text-align: center;
-
+        font-weight: bold;
         &-close {
             position: absolute;
             top: 5px;
