--- a/src/assets/components/Groups/Group/Group.scss
+++ b/src/assets/components/Groups/Group/Group.scss
@@ -12,6 +12,7 @@
     }
 
     &-title {
+        border-radius: 10px;
         font-weight: bold;
         font-size: 24px;
         text-align: center;
@@ -20,6 +21,11 @@
         flex-direction: column;
         padding-bottom: 5px;
         word-break: break-all;
+        &-line{
+            width: 100%;
+            height: 5px;
+            border-radius: 10px;
+        }
         &-desc {
             font-size: 16px;
             font-weight: normal;
@@ -47,7 +53,7 @@
         }
         &-members {
             padding: 15px;
-            border: solid 3px $main-color;
+            border: solid 2px $second-color;
             border-radius: 15px;
             display: flex;
             flex-direction: column;
@@ -60,7 +66,7 @@
 
         &-stats{
             // background-color: $main-color;
-            border: solid 3px $main-color;
+            border: solid 2px $second-color;
             border-radius: 15px;
             padding: 15px;
             display: flex;
@@ -89,10 +95,10 @@
         border-radius: 15px;
         padding: 7.5px;
         font-weight: bold;
-        background-color: $main-color;
+        background-color: #42A5F588;
 
         &:nth-child(even) {
-            background-color: $second-color;
+            background-color: #90CAF988;
         }
 
         >span {
