--- a/src/assets/components/Resources/GetLinksBlock.scss
+++ b/src/assets/components/Resources/GetLinksBlock.scss
@@ -1,14 +1,14 @@
 .GetLinksBlock {
     width: 100%;
     max-height: 600px;
-    border: solid 1px $main-color;
+    border: solid 1px $second-color;
+    border-radius: 11px;
     &-header {
         display: flex;
         width: 100%;
-        background-color: $main-color;
+        background-color: $second-color;
         justify-content: center;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
+        border-radius: 10px;
         &-title {
             display: flex;
             align-items: center;
