--- a/src/components/Resources/Resources.module.css
+++ b/src/components/Resources/Resources.module.css
@@ -79,7 +79,8 @@
     height: max-content;
     display: flex;
     flex-direction: column;
-    border: solid 1px var(--main-color);
+    border: solid 1px var(--second-color);
+    border-radius: 11px;
 }
 .inner__cards{
     padding: 10px;
@@ -96,10 +97,9 @@
 .cards__header{
     display: flex;
     width: 100%;
-    background-color: #42A5F5;
+    background-color: var(--second-color);
     justify-content: center;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 10px;
 }
 .cards__title{
     display: flex;
