Added new calendar and so on

--- a/src/assets/components/components.scss
+++ b/src/assets/components/components.scss
@@ -8,3 +8,5 @@
 @import "./Events/events.scss";
 @import './Transactions/transactions.scss';
 @import './MobileNavigation/MobileNavigation.scss';
+@import './Calendar/MyBigCalendar.scss';
+@import './Calendar/AddCalendarEvent.scss';
