--- a/src/assets/components/Cases/ListCases.scss
+++ b/src/assets/components/Cases/ListCases.scss
@@ -2,11 +2,13 @@
     &-sort {
         display: flex;
         gap: 5px;
-        width: max-content;
+        width: 100%;
         margin: auto;
         padding-bottom: 10px;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         align-items: center;
+        justify-content: center;
+
     }
     &-table {
         width: 90%;
