--- a/src/assets/modals/Modal.scss
+++ b/src/assets/modals/Modal.scss
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 998;
+    z-index: 999;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -30,6 +30,10 @@
         flex-direction: column;
         gap: 20px;
         align-items: center;
+        max-height: 80vh;
+        max-width: 90vw;
+        overflow: auto;
+
     }
 
     &--head {
@@ -76,6 +80,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        max-height: 70vh;
+        overflow-y: auto;
         gap: 20px;
         >*{
             width: 100%;
