--- a/src/assets/components/Cases/Case/Case.scss
+++ b/src/assets/components/Cases/Case/Case.scss
@@ -240,7 +240,7 @@
         bottom: 0;
         background: #000000bb;
         height: auto;
-        overflow-y: scroll;
+        overflow-y: auto;
         color: #fff;
         padding-bottom: 200px;
     }
