--- a/src/assets/components/Cases/Case/FileSearch.scss
+++ b/src/assets/components/Cases/Case/FileSearch.scss
@@ -54,7 +54,7 @@
         width: 100%;
         top: 45px;
         transition: all 0.3s;
-        overflow-y: scroll;
+        overflow-y: auto;
         opacity: 1;
         display: block;
         max-height: 150px;
