--- a/src/assets/components/Cases/Case/Info/PersonalInfo.scss
+++ b/src/assets/components/Cases/Case/Info/PersonalInfo.scss
@@ -2,10 +2,10 @@
     padding: 16px;
     border: solid 1px $main-color;
     border-radius: 16px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
-    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    box-sizing: border-box;
     &-categories{
         display: flex;
         flex-direction: column;
@@ -51,8 +51,18 @@
         }
     }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1150px) {
     .PersonalInfo {
-        grid-template-columns: 1fr;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+}
+@media screen and (max-width: 720px) {
+    .PersonalInfo {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
     }
 }
