--- a/src/assets/modals/FileModal.scss
+++ b/src/assets/modals/FileModal.scss
@@ -23,7 +23,7 @@
         position: relative;
         width: 90%;
         height: 70vh;
-        overflow-y: scroll;
+        overflow-y: auto;
         background-color: #fff;
         padding: 20px;
         border-radius: 10px;
