--- a/src/assets/components/Cases/Case/Fields.scss
+++ b/src/assets/components/Cases/Case/Fields.scss
@@ -53,7 +53,7 @@
         flex-direction: column;
         gap: 25px;
         max-height: 400px;
-        overflow-y: scroll;
+        overflow-y: autos;
     }
     
 }
