--- a/src/assets/pages/EventPage/EventPage.scss
+++ b/src/assets/pages/EventPage/EventPage.scss
@@ -144,7 +144,7 @@
             gap: 15px;
             word-break: break-all;
             max-height: 150px;
-            overflow-y: scroll;
+            overflow-y: auto;
             &-feedback{
                 display: flex;
                 flex-direction: column;
