--- a/src/assets/elements/Tables/Table.scss
+++ b/src/assets/elements/Tables/Table.scss
@@ -3,7 +3,7 @@
     max-height: 450px;
     overflow: auto;
     text-align: center;
-
+    display: block;
     table{
         border-collapse: collapse;
         width: 100%;
