--- a/src/assets/components/Calendar/MyBigCalendar.scss
+++ b/src/assets/components/Calendar/MyBigCalendar.scss
@@ -8,6 +8,8 @@
         &-text{
             text-transform: uppercase;
             font-weight: 600;
+            display: flex;
+            align-items: center;
         }
     }
     .rbc-event.rbc-selected {
