--- a/src/assets/components/Cases/Cases.scss
+++ b/src/assets/components/Cases/Cases.scss
@@ -11,3 +11,4 @@
 @import "./Case/FileSearch.scss";
 @import "./Case/Histories.scss";
 @import "./ListCases.scss";
+@import "./Case/CaseLikePDF.scss";
