--- a/src/assets/components/components.scss
+++ b/src/assets/components/components.scss
@@ -11,3 +11,4 @@
 @import './Calendar/MyBigCalendar.scss';
 @import './Calendar/AddCalendarEvent.scss';
 @import './Fields/fields.scss';
+@import './Menu/index.scss';
