--- a/src/assets/components/Cases/ListCases.scss
+++ b/src/assets/components/Cases/ListCases.scss
@@ -1,9 +1,10 @@
 .ListCases {
-    width: 80%;
+    width: 100%;
     margin:auto;
     display: flex;
     flex-direction: column;
     gap: 25px;
+    margin-top: 50px;
     &-sort {
         display: flex;
         gap: 5px;
@@ -17,7 +18,7 @@
 
     }
     &-table {
-        width: 90%;
+        width: 100%;
         margin: auto;
     }
     &-pagination {
@@ -28,6 +29,7 @@
 }
 @media screen and (max-width: 600px){
     .ListCases {
+        margin-top: 0;
         &-sort {
             flex-direction: column;
             gap: 10px;
