--- a/src/assets/elements/Tables/Table.scss
+++ b/src/assets/elements/Tables/Table.scss
@@ -4,6 +4,15 @@
     overflow: auto;
     text-align: center;
     display: block;
+    border: solid 1px #ccc;
+    border-radius: 8px;
+    &-row-menu {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        font-size: 20px;
+    }
     table{
         border-collapse: collapse;
         width: 100%;
@@ -18,6 +27,17 @@
         td{
             border: 1px solid #ccc;
             padding: 5px 10px;
+            .cell {
+                &.break-word {
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    overflow: hidden;
+                    -webkit-line-clamp: 2;
+                    width: 100%;
+                    -webkit-box-orient: vertical;
+                }
+            }
+          
         }
         tr:hover {
             background-color: $background-color;
