--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,6 +1,8 @@
 footer{
     margin-top: 50px;
     background-color: #2a334c;
+    margin-right: 10px;
+    border-radius: 8px 8px 0 0;
 }
 .footer{
     padding-top: 75px;
