--- a/src/components/Header/Menu/bell.module.css
+++ b/src/components/Header/Menu/bell.module.css
@@ -6,6 +6,7 @@
     left: 0;
     display: grid;
     grid-template-columns: calc(100% - 500px) 500px;
+    z-index: 99999;
 }
 .black{
     transition: all .3s;
