--- a/src/components/Header/Menu/nav.module.css
+++ b/src/components/Header/Menu/nav.module.css
@@ -12,7 +12,11 @@
     position: fixed;
     right: 0;
     top: 60px;
-    height: 100%;
+    height: calc(100% - 60px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 .ul{
     list-style: none;
@@ -26,6 +30,16 @@ nav a.active{
 }
 .li{
     display: block;
+    padding: 2px;
+    border-radius: 8px;
+}
+.li:hover {
+    background-color: var(--second-color);
+}
+.with_icon {
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 .a{
     color: #fff;
@@ -42,15 +56,23 @@ nav a.active{
     display: flex;
     justify-content: space-around;
 }
-.profile:hover{
-    background-color: #000;
+.profile, .logout {
     border-radius: 50%;
     width: 30px;
     height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.profile:hover{
+    background-color: #000;
+
 }
 .logout:hover{
     background-color: #f00;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
+}
+.control__nav {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 }
