--- a/src/assets/components/Cases/Case/Case.scss
+++ b/src/assets/components/Cases/Case/Case.scss
@@ -121,7 +121,7 @@
     width: 100%;
     display: flex;
     justify-content: right;
-
+   // position: absolute;
 
     .setImg {
         width: 100%;
