--- a/src/assets/elements/TextEditor/TextEditor.scss
+++ b/src/assets/elements/TextEditor/TextEditor.scss
@@ -1,10 +1,11 @@
 .TextEditor {
     &-buttons{
-        position: fixed;
-        bottom: 75px;
-        right: 75px;
-        display: flex;
-        gap: 15px;
+      // position: absolute;
+      bottom: 0;
+      left: 0;
+      display: flex;
+      gap: 15px;
+      margin-top: 50px;
     }
 }
 .ql-editor {
@@ -12,11 +13,11 @@
   }
 @media screen and (max-width:1000px){
     .TextEditor{
-        &-buttons{
-            bottom: 25px;
-            right: 12.5px;
-            flex-direction: column;
-        }
+        // &-buttons{
+        //     bottom: 25px;
+        //     right: 12.5px;
+        //     flex-direction: column;
+        // }
     }
 }
 .ql-snow .ql-picker.ql-size .ql-picker-label::before,
