--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -12,3 +12,4 @@
 @import "./Tables/tables.scss";
 @import "./Pagination/Pagination.scss";
 @import "./HeaderFormatter/HeaderFormatter.scss";
+@import "./Uploaders/LoadingPage.scss";
