--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -7,4 +7,4 @@
 @import "./components//components.scss";
 @import "./modals/modals.scss";
 @import "./api/api.scss";
-
+@import "./pages/AncetsPage.scss";
