--- a/src/assets/modals/Modal.scss
+++ b/src/assets/modals/Modal.scss
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 999;
+    z-index: 99;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -83,6 +83,7 @@
         max-height: 70vh;
         overflow-y: auto;
         gap: 20px;
+        padding-top: 10px;
         >*{
             width: 100%;
         }
@@ -110,4 +111,10 @@
             }
         }
     }
+}
+.FooterDefaultModal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
 }
