--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -17,7 +17,7 @@
 }
 .card{
     padding: 20px;
-    box-shadow: 0 0 10px 0 #ababaa;
+    box-shadow: 0 0 4px 0 #ababaa;
     position: relative;
     border-radius: 10px;
     background-color: var(--second-color);
@@ -30,6 +30,7 @@
     justify-content: space-between;
     max-height: 200px;
     overflow: hidden;
+   
 }
 
 .categories__data{
@@ -41,6 +42,7 @@
 max-width: 100%;
 max-height: 200px;
 min-width: 100px;
+border-radius: 10px;
 }
 .card__case__name{
     text-align: center;
