--- a/src/assets/pages/LoginPage.scss
+++ b/src/assets/pages/LoginPage.scss
@@ -22,5 +22,8 @@
         gap: 24px;
         width: 50%;
         min-width: 400px;
+        .Input div {
+            width: 100%;
+        }
     }
 }
