--- a/src/assets/components/Cases/Case/Notes.scss
+++ b/src/assets/components/Cases/Case/Notes.scss
@@ -30,6 +30,9 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+        .Input div {
+            width: 100%;
+        }
     }
     &-viewer{
         max-height: 400px;
